--- a/Census/app/build.gradle
+++ b/Census/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.github.duanhong169:colorpicker:1.1.6'
     implementation 'com.github.Dhaval2404:ColorPicker:2.3'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
